# lakebase_autoscaling_patterns

./: .gitignore  LICENSE  README.md
lakebase_utils/: CLAUDE.md  README.md  databricks.yml  pyproject.toml  requirements.txt
lakebase_utils/docs/: data_access_patterns.md  fix_data_api_auth.md  lakebase_api.md  lakebase_connect.md  lakebase_provisioning.md  quick_reference.md
lakebase_utils/fixtures/: provisioning_full.yaml  provisioning_invalid.yaml  provisioning_minimal.yaml
lakebase_utils/src/: create_widgets.sql  provision_data_api_role.sql  test_lakebase_api.py  test_oauth_user.py  test_user_authentication_flow.ipynb  test_user_oauth.py
lakebase_utils/src/lakebase_utils/: _common.py  lakebase_api.py  lakebase_api_async.py  lakebase_connect.py
lakebase_utils/src/lakebase_utils/provisioning/: __init__.py  cli.py  config.py  engine.py
lakebase_utils/src/lakebase_utils/provisioning/reconcilers/: __init__.py  base.py  exposed_schemas.py  grants.py  roles.py
lakebase_utils/src/lakebase_utils/provisioning/schemas/: lakebase_provisioning_spec.json
lakebase_utils/tests/tests/: conftest.py  test_config.yaml  test_config.yaml.template
lakebase_utils/tests/tests/integration/: conftest.py  test_lakebase_api_async_live.py  test_provisioning_live.py
lakebase_utils/tests/tests/unit/: test_common.py  test_lakebase_api_async.py  test_lakebase_api_sync.py  test_provisioning_config.py  test_provisioning_engine.py  test_provisioning_exposed_schemas.py  test_provisioning_grants.py  test_provisioning_roles.py  test_retry.py  test_token_bucket.py
(+2 files in other folders)
